--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "version:major": "node scripts/version.js major"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "framer-motion": "^10.16.0",
     "i18next": "^25.8.4",
     "i18next-browser-languagedetector": "^8.2.0",
